# cosmo-agency

./: .dockerignore  .env.template  .gitignore  README.md  pyproject.toml
docker/: compose.development.yaml
docker/django/: Dockerfile
docker/django/init/: entrypoint-development.sh
src/apps/core/: urls.py  views.py
src/apps/core/migrations/: 0001_set_site_domain_and_name.py
src/apps/core/static/css/: main.css
src/apps/core/static/pages/: index.js
src/apps/core/templates/: base.html
src/apps/core/templates/_includes/: messages.html
src/apps/core/templates/_layouts/: header.html  horizontal-navbar.html
src/apps/core/templates/core/: index.html
src/apps/core/templates/pages/: index.html
src/apps/core/templates/pages/_includes/: advantages.html  hero.html
src/apps/slider/: admin.py  apps.py  managers.py  models.py
src/apps/slider/management/commands/: import_slides.py
src/apps/slider/migrations/: 0001_initial.py
src/apps/slider/static/slider/: fullscreen-image-view.css  fullscreen-image-view.js  sync-slider.css  sync-slider.js
src/apps/slider/static/slider/_vendors/slick-carousel/: slick-theme.css
src/apps/slider/templates/slider/_includes/: fullscreen-image-view.html  slider.html
src/config/: urls.py
src/config/settings/: base.py
src/config/settings/components/: logging_.py
src/locale/ru/LC_MESSAGES/: django.po
