[project]
name = "cosmo-agency"
version = "0.1.0"
description = "Django test project with Bootstrap and Slick Slider"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "django==5.2.11",
    "mysqlclient==2.2.8",
    "python-decouple==3.8",
]

[dependency-groups]
dev = [
    "django-browser-reload==1.21.0",
    "django-debug-toolbar==6.2.0",
    "ruff==0.15.4",
]
